[package]
name = "garden"
version = "0.1.0"
edition = "2024"
description = "Garden schema generator and CLI tool"

[lib]
name = "garden"
path = "src/lib.rs"

[[bin]]
name = "garden-schema"
path = "src/main.rs"

[dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
