[package]
name = "garden"
version = "0.1.0"
edition = "2024"
authors = ["Omni <team@omni.dev>"]
description = "Garden schema generator and CLI tool"
license = "Apache-2.0"
repository = "https://github.com/omnidotdev/garden-cli"
homepage = "https://garden.omni.dev"
readme = "README.md"
keywords = ["schema", "generator", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "garden"
path = "src/lib.rs"

[[bin]]
name = "garden-schema"
path = "src/main.rs"

[dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
